--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@recodable/khala",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dist": "npm run build && cp package* README.md dist && cd dist && npm publish"
   },
   "author": "",
   "license": "ISC",
